fix:sidebar on small width

--- a/assets/css/account/dashboardSidebar.css
+++ b/assets/css/account/dashboardSidebar.css
@@ -6,6 +6,7 @@
     width: 16rem;
     z-index: 4;
     justify-content: flex-start;
+    background: var(--white-background-color);
 }
 
 .sideBarList .iconsContainer,
